--- a/react-entry-test/src/App.css
+++ b/react-entry-test/src/App.css
@@ -1,3 +1,51 @@
+
 body {
- 
+    /*  App styling */
+    background-color: rgba(2, 15, 108, 0.5);
+    color: white;
+    /* Setting background image  */
+    background-image: url("./smile.png"); 
+    /* background-image: url("@https://postimg.cc/QBvWLvpd"); /* hosted image */
+    background-repeat: no-repeat; 
+} 
+
+button{
+    /* Gives pop up effect  */
+    box-shadow:inset 0px 1px 0px 0px #f29c93;
+	background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+    background-color:#fe1a00;
+    
+    /* Size configurations  */
+	border-radius:6px;
+	border:1px solid #d83526;
+	display:inline-block;
+	cursor:pointer;
+    
+    
+    /* Font configuration  */
+    color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+    font-weight:bold;
+    
+    /* Button positioning */
+	padding:6px 24px;
+	text-decoration:none;
 }
+
+
+@media screen and (min-width : 768px) {
+    /* Mobile devices */
+        body{
+            width: 75%;
+        }
+      
+      }
+    
+      /* Medium devices, Desktops */
+      @media  screen and (min-width : 992px) {
+        body{
+            width: 50%;
+        }
+      }
+    
